tests/errors/invalid1.ramen.err
Parse error: Line 1, column 16: Cannot find whitespaces while looking for operation (in anonymous function in program)
